data/raw_logs/syntactic/syn_4.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_4.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_4.c:1:26: error: invalid type argument of unary '*' (have 'int')
    1 | int main() { int x = 5 + * 2; }
      |                          ^~~
